--- a/src/todo.css
+++ b/src/todo.css
@@ -3,7 +3,12 @@
     box-sizing: border-box;
     padding: 0;
   }
-  
+
+  body {
+    background-image: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
+
+  }
+
 
   /* todo Header*/
   .todo__heading{
@@ -16,6 +21,7 @@
   .todo__body{
     display:flex;
     justify-content: center;
+    
   }
   
   .input{
@@ -45,5 +51,61 @@
 /* todo*/
 .strike{
     text-decoration: line-through;
+    position: absolute;
+    left:10px;
 }
 
+.todoInnerContainer{
+  position:relative;
+  display:flex;
+  align-items: center;
+ justify-content: flex-end;
+ align-items: center;
+  margin-top:2rem;
+  margin-bottom:2rem;
+  width:50%;
+  height: 100%;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: #ff4e00;
+  background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
+  padding-left: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.todoOuterContainer{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.button{
+  align-self: flex-end;
+  padding:5px;
+  background-color: aqua;
+  border: 2px solid black;
+  border-radius: 5px;
+  margin:10px
+}
+
+.button:hover{
+  cursor:pointer;
+}
+
+.checkboxInput{
+  
+  height:20px;
+  width:20px
+}
+
+.buttons{
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.todoPara{
+  position:absolute;
+  left:10px;
+}
